--- a/templates/contact.html
+++ b/templates/contact.html
@@ -121,4 +121,7 @@
 <script src='js/service.js'></script>
 	
 </body>
+<script src='http://code.jquery.com/jquery.min.js'></script>
+<script src='bower_components/bootstrap/js/bootstrap.min.js'></script>
+
 </html>
