--- a/templates/compositions.html
+++ b/templates/compositions.html
@@ -56,7 +56,7 @@
 		<div class='container'>
 
 		    <div class="navbar-header">
-		    	<a class="navbar-brand" href="/">Graham Dunne</a>
+		    	<a class="navbar-brand" href="/index.html">Graham Dunne</a>
 		    	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myCollapsingList">
 	   	   			<span class="icon-bar"></span>
           			<span class="icon-bar"></span>
