--- a/templates/productions.html
+++ b/templates/productions.html
@@ -1,80 +1,3 @@
-<!DOCTYPE html>
-<html>
-<html ng-app='grahamdunnemusic'>
-<head>
-	<base href="/"> <!-- needed for Angular HTML 5 mode -->
-	<meta charset="UTF-8">
-	<title>Home | Graham Dunne</title>
-	<meta property="og:title" content="Home | Graham Dunne" />
-	<meta property="og:type" content="website" />
-	<meta property="og:url" content="http://www.grahamdunnemusic.com" />
-	<meta property="og:image" content="http://www.grahamdunnemusic.com/css/images/Graham_Godin.jpg" />
-	<meta property="fb:app_id" content="1498139396870513"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="css/myStyle.css" media="screen" />
-    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css'>
-	
-	<script type="text/javascript" src="bower_components/angular/angular.js"></script>
-    <script type="text/javascript" src="bower_components/angular-route/angular-route.js"></script>
-	
-</head>
-
-<body>
-
-<!--<script>
-  window.fbAsyncInit = function() {
-    FB.init({
-      appId      : '1498139396870513',
-      xfbml      : true,
-      version    : 'v2.8'
-    });
-    FB.AppEvents.logPageView();
-  };
-
-  (function(d, s, id){
-     var js, fjs = d.getElementsByTagName(s)[0];
-     if (d.getElementById(id)) {return;}
-     js = d.createElement(s); js.id = id;
-     js.src = "//connect.facebook.net/en_US/sdk.js";
-     fjs.parentNode.insertBefore(js, fjs);
-   }(document, 'script', 'facebook-jssdk'));
-</script>-->
-
-	<!--<nav>
-  		<a id="logoNav" href="index.html">Graham Dunne</a> 
-     	<a href="bio.html">About</a>
-     	<a href="productions.html">Productions</a>
-     	<a href="compositions.html">Compositions</a>
-     	<a href="guitar.html">Guitar</a>
-     	<a href="transcriptions.html">Transcriptions</a>
-     	<a href="contact.html">Contact</a>
-	</nav>-->
-
-	<!--add classes to fix nav to top and change nav color-->
-	<nav class="navbar navbar-default navbar-top">		
-		<div class='container'>
-
-		    <div class="navbar-header">
-		    	<a class="navbar-brand" href="/index.html">Graham Dunne</a>
-		    	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myCollapsingList">
-	   	   			<span class="icon-bar"></span>
-          			<span class="icon-bar"></span>
-           			<span class="icon-bar"></span>
-        		</button>
-		    </div>	    
-		    <ul  id="myCollapsingList" class ="nav navbar-nav collapse navbar-collapse navbar-right"> 
-				 <li><a href="/templates/bio.html">About</a></li>
-			     <li><a href="/templates/productions.html">Productions</a></li>
-			     <li><a href="/templates/compositions.html">Compositions</a></li>
-			     <li><a href="/templates/guitar.html">Guitar</a></li>
-			     <li><a href="/templates/transcriptions.html">Transcriptions</a></li>
-			     <li><a href="/templates/contact.html">Contact</a></li>
-			</ul>
-		</div>
-	</nav>
-
 <div class="container">
 
 	<div class="vertical-center-row">
@@ -139,17 +62,8 @@
 	<div id= "footer2">
 		<h6>Website by Gramsham Multi Media Productions. Copyright © 2017. Graham Dunne. All Rights Reserved.</h6>
 	</div>
- <div ng-view>
+ <div 
+
+ 	ng-view>
  
-    </div>
-
-<script src='js/app.js'></script>
-<script src='js/controller.js'></script>
-<script src='js/service.js'></script>
-
-</body>
-<script src='http://code.jquery.com/jquery.min.js'></script>
-<script src='bower_components/bootstrap/dist/js/bootstrap.min.js'></script>
-
-
-</html>
+</div>
