--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -159,7 +159,7 @@
 				text-align: center;
 				font-family: Dosis;
 				font-weight: bold;
-				font-size: 35px;
+				font-size: 30px;
 				margin:50px 20px;
 			}
 			#landing-message:hover{
@@ -223,6 +223,13 @@
 				width:80%;
 				margin: 100px auto;
 				color: #fff;
+			}
+			#landing-message{
+				text-align: center;
+				font-family: Dosis;
+				font-weight: bold;
+				font-size: 35px;
+				margin:50px 20px;
 			}
 			#landing-message:hover{
 				color: black;
