--- a/templates/guitar.html
+++ b/templates/guitar.html
@@ -9,26 +9,26 @@
 	<h4>----Darn That Dream (November, 2016)----</h4>
 	<p>Learnt from the 'Music of Jimmy van Heusen' video by Martin Taylor, this is Graham's attempt at this beautiful ballad from 1939, recorded while A/B testing guitars in front of a Neumann KM 184.</p>
 	 <audio controls= "controls" preload="auto">
- 		<source src="music/DarnThatDream.mp3" type="audio/mpeg; codecs=mp3"/>
+ 		<source src="/music/DarnThatDream.mp3" type="audio/mpeg; codecs=mp3"/>
  	 <!-- add other fallback solution here, eg. Your browser does not support the <code>audio</code> element -->
  	</audio><br><br>
 
  	<h4>----What's New? (November, 2016)----</h4>
 	<p>From the same session as 'Darn That Dream', this is a fingerstyle version of a Frank Evans arrangement from a 1994 issue of Guitar Techniques magazine.</p>
 	 <audio controls= "controls" preload="auto">
- 		<source src="music/WhatsNew.mp3" type="audio/mpeg; codecs=mp3"/>
+ 		<source src="/music/WhatsNew.mp3" type="audio/mpeg; codecs=mp3"/>
  	</audio><br><br>
 
  	<h4>----Tremolo Study (April, 2016)----</h4>
 	<p>A residual study from time spent with Flamenco, this is a beautiful piece by the great teacher, Oscar Herrero.</p>
 	 <audio controls= "controls" preload="auto">
- 		<source src="music/TremeloEminor.mp3" type="audio/mpeg; codecs=mp3"/>
+ 		<source src="/music/TremeloEminor.mp3" type="audio/mpeg; codecs=mp3"/>
  	</audio><br><br>
 
  	<h4>----The Lost Arpeggio (March, 2012)----</h4>
 	<p>Composed and recorded while supposed to have been studying, this is Graham checking out a Taylor acoustic guitar that he eventually purchased from a friend whilst living in the beautiful County Clare.</p>
 	 <audio controls= "controls" preload="auto">
- 		<source src="music/LostArpeggio.mp3" type="audio/mpeg; codecs=mp3"/>
+ 		<source src="/music/LostArpeggio.mp3" type="audio/mpeg; codecs=mp3"/>
  	</audio><br><br>
 
 	
@@ -48,7 +48,7 @@
 	<div id= "footer2">
 		<h6>Website by Gramsham Multi Media Productions. Copyright © 2017. Graham Dunne. All Rights Reserved.</h6>
 	</div>
-	
+
  <div 
 
  	ng-view>
