--- a/templates/productions.html
+++ b/templates/productions.html
@@ -9,7 +9,7 @@
 		
 	<h4>----Niamh Parsons & Graham Dunne - Kind Providence (2016)----</h4>
 	<figure>
-		<a href="http://www.cdbaby.com/cd/niamhparsons"><img id="pic1" src="images/kindprovidence.jpg" alt="Kind Providence Album Cover" width="200" height="200">
+		<a href="http://www.cdbaby.com/cd/niamhparsons"><img id="pic1" src="/images/kindprovidence.jpg" alt="Kind Providence Album Cover" width="200" height="200">
 		</a>
 	</figure>
 	<p>Destined to become a classic in the folk genre, this album is Graham's first fully fledged production from start to finish. It is quite an innovative album, subtly blending acoustic instruments such as piano and guitar with software instruments and digitally processed sounds (those of voice and guitar). The kind of instrumentation used is more commonly found in other genres of music such as ambient, electroacoustic, electronic and pop, however, Graham has managed to use these instruments and sounds in a very organic way, producing an album of great variety and taste, always at the service of Niamh's inimitable voice.</p>
@@ -21,7 +21,7 @@
 	<h4>----Mark Anthony McGrath - The Weiss Machine Vol. 1 (2015)----</h4>
 
 		<figure>
-			<a href="http://www.markanthonymcgrath.com"><img id="pic2" src="images/weissmachine.jpg" alt="The Weiss Machine" width="100" height="100"></a>
+			<a href="http://www.markanthonymcgrath.com"><img id="pic2" src="/images/weissmachine.jpg" alt="The Weiss Machine" width="100" height="100"></a>
 		</figure>
 
 		<p>Co-produced with Mark Anthony himself, this album represents Graham's first big studio project. In fact, 'The Weiss Machine' is a first for both the world of guitar and that of classical music - a solo album featuring the music of Sylvius Leopold Weiss, played on a specially designed thirteen string guitar.</p>
@@ -33,7 +33,7 @@
 
 	<h4>----Niamh Parsons & Graham Dunne - Live at Fylde (2006)----</h4>
 
-		<a href="http://www.cdbaby.com/cd/parsonsdunne"><img id="pic3" src="images/fylde.jpg" alt="Live at Fylde" width="200" height="200"></a>
+		<a href="http://www.cdbaby.com/cd/parsonsdunne"><img id="pic3" src="/images/fylde.jpg" alt="Live at Fylde" width="200" height="200"></a>
 		
 		<p>'Live at Fylde' has become a classic in the world of folk music. An electric performance with a magical atmosphere, this album was recorded at Fylde Folk Festival, Fleetwood, England in 2005.</p>
 		
@@ -41,7 +41,7 @@
 
 	<h4>----Giotáraí - Solo Guitar Album (2004)----</h4>
 
-		<a href="http://www.cdbaby.com/cd/grahamdunne"><img id="pic4" src="images/giotaraiCover.jpg" alt="Graham Solo Album Cover " width="200" height="200"></a>
+		<a href="http://www.cdbaby.com/cd/grahamdunne"><img id="pic4" src="/images/giotaraiCover.jpg" alt="Graham Solo Album Cover " width="200" height="200"></a>
 		
 		<p>This is Graham's first effort at a solo guitar project and the album was well very received indeed. Inspired for years by the likes of Arty McGlynn's 'McGlynn's Fancy' and Dick Gaughan's 'Coppers and Brass', this album is a valiant solo guitar effort for what it is - a very straightforward, uncluttered album, with several arrangements of flatpicking Irish traditional melodies and also some fingerstyle pieces such as Django Reinhardt's 'Tears'. It also features an original composition in 7/8 time.</p>
 		
