--- a/templates/home.html
+++ b/templates/home.html
@@ -1,52 +1,23 @@
 <div class="container">
-
-	<div class="vertical-center-row">
-
-		<div align="center">
-
-
-	<div id= "image1" class="box"><h3> A Selection of Compositions: </h3>
-	
-	<h4>----Murmuration No.1 (July, 2016)----</h4>
-	<p>This composition is an improvisation between the composer on tabla, and an A.I. (Artificial Life) algorithm imitating the flight of birds on piano. The algorithm was created in Java and the piece was realised in Ableton Live.</p>
-	 <audio controls= "controls" preload="auto">
- 		<source src="/music/Murmuration1.mp3" type="audio/mpeg; codecs=mp3"/>
- 	 <!-- add other fallback solution here, eg. Your browser does not support the <code>audio</code> element -->
- 	</audio><br><br>
-
- 	<h4>----Are You Waiting For Me To Sing? (August, 2014)----</h4>
-	<p>This was originally a 5.1 surround sound piece for my thesis in 2014, and is here presented in stereo format. The piece was a study of gesture in composition and seemed like a good excuse to use an off-the-cuff remark caught on tape whilst recording the vocals for 'Kind Providence'. At seven minutes long, every single sound heard is derived from the first couple of syllables heard in the opening statement.</p>
-	 <audio controls= "controls" preload="auto">
- 		<source src="/music/Waiting.mp3" type="audio/mpeg; codecs=mp3"/>
- 	</audio><br><br>
-
- 	<h4>----Time is in the Ting (October, 2013)----</h4>
-	<p>Originally a classroom exercise designed to create a piece of 'tape' music, or musique concrète, this piece uses samples recorded using a waterproof microphone. The mic was frozen in a small container of water which was then put into a pot of hot water and the defrosting process is what was recorded. After that, some Solpadeine dissolving in a glass of water provided the second sample. It's not everyday we get to hear life inside a defrosting ice-cube!</p>
-	 <audio controls= "controls" preload="auto">
- 		<source src="/music/TimeisintheTing.mp3" type="audio/mpeg; codecs=mp3"/>
- 	</audio><br><br>
-
- 	<h4>----The Lost Arpeggio (March, 2012)----</h4>
-	<p>Composed and recorded while supposed to have been studying, this is Graham checking out a Taylor acoustic guitar that he eventually purchased from a friend whilst living in the beautiful County Clare.</p>
-	 <audio controls= "controls" preload="auto">
- 		<source src="/music/LostArpeggio.mp3" type="audio/mpeg; codecs=mp3"/>
- 	</audio><br><br>
-
- 			</div>
+	<div class='row'>
+		<div class='col-md-12'>
+			<div id= "landing">
+				<div id="landing-message">
+					Welcome to the official website of Graham Dunne - guitarist, audio engineer, music producer, music systems programmer, and electroacoustic music composer.
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
 
-<<!--<div id="fbdiv"
+<!--<div id="fbdiv"
   class="fb-like"
   data-share="true"
   data-width="450"
-  data-show-faces="true"
+  data-show-faces="true">
 </div>-->
 
-	<div id= "footer2">
-		<h6>Website by Gramsham Multi Media Productions. Copyright © 2017. Graham Dunne. All Rights Reserved.</h6>
-	</div>
 
- 
-
+<div id= "footer1">
+	<h6>Website by Gramsham Multi Media Productions. Copyright © 2017. Graham Dunne. All Rights Reserved.</h6>
+</div>
