--- a/templates/guitar.html
+++ b/templates/guitar.html
@@ -45,5 +45,7 @@
   data-show-faces="true">
 </div>-->
 
-	
+	<div id= "footer2">
+		<h6>Website by Gramsham Multi Media Productions. Copyright © 2017. Graham Dunne. All Rights Reserved.</h6>
+	</div>
 
