--- a/templates/contact.html
+++ b/templates/contact.html
@@ -36,4 +36,7 @@
   data-show-faces="true">
 </div>-->
 
+<div id= "footer1">
+		<h6>Website by Gramsham Multi Media Productions. Copyright © 2017. Graham Dunne. All Rights Reserved.</h6>
+</div>
 
