--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -80,7 +80,7 @@
 
 			body {
 				
-				background-image: url("images/Loopers6.png"); /*to set the background image*/
+				background-image: url("/images/Loopers6.png"); /*to set the background image*/
 				background-size: cover;
 				background-repeat: no-repeat;
     			background-attachment: fixed;/* maintains image positionwhile scrolling*/
