--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,9 +1,11 @@
 
-
-
 <div class="container">
     <div class="vertical-center-row">
         <div class="col-sm-6 col-lg-12">
+        	<div id= "Contact" class="box"><h3>How to contact Graham?</h3>
+				<p>If you would like to contact Graham regarding solo performances, guitar lessons, transcriptions or recording projects,
+		    		please fill out the form below, or simply email executiveguitarist (at) gmail (dot) com.</p>
+
             <form name="registrationForm" data-ng-submit="submitForm()" novalidate>
                 <div class="form-group">
                     <label>Name</label>
