--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,28 +1,34 @@
 
+
 <div class="container">
-    <div class="vertical-center-row">
-        <div class="col-sm-6 col-lg-12">
-        	<div id= "Contact" class="box"><h3>How to contact Graham?</h3>
+
+	<div class="vertical-center-row">
+
+		<div align="center">
+
+
+			<div id= "Contact" class="box"><h3>How to contact Graham?</h3>
 				<p>If you would like to contact Graham regarding solo performances, guitar lessons, transcriptions or recording projects,
 		    		please fill out the form below, or simply email executiveguitarist (at) gmail (dot) com.</p>
+		
+					<form action="mailto:info@grahamdunnemusic.com" method="post" enctype="text/plain">
+						Name:<br>
+						<input type="text" name="name"><br>
+						E-mail:<br>
+						<input type="text" name="mail"><br>
+						Comment:<br>
+						<input type="text" name="message" size="30"><br><br>
+						<input type="submit" value="Send">
+						<input type="reset" value="Reset">
+						</form>
 
-            <form name="registrationForm" data-ng-submit="submitForm()" novalidate>
-                <div class="form-group">
-                    <label>Name</label>
-                    <input type="text" name="name" class="form-control" data-ng-model="user.username" required>
-                    <p data-ng-show="registrationForm.name.$pristine" class="help-block">Your username is required</p>
-                </div>
-                <div class="form-group">
-                    <label>Password</label>
-                    <input type="password" name="password" class="form-control" data-ng-model="user.password" required>
-                    <p data-ng-show="registrationForm.password.$pristine" class="help-block">Your password is required</p>
-                </div>
- 
-                <button type="submit" class="btn btn-primary" data-ng-disabled="registrationForm.$invalid">Register</button>
-            </form>
-        </div>
-    </div>
+
+
+			</div>
+		</div>
+	</div>
 </div>
+
 <!--<div id="fbdiv"
   class="fb-like"
   data-share="true"
