--- a/templates/compositions.html
+++ b/templates/compositions.html
@@ -32,6 +32,20 @@
  		<source src="/music/LostArpeggio.mp3" type="audio/mpeg; codecs=mp3"/>
  	</audio><br><br>
 
+ 	<h4>----Cumha an Ghrá (2005)----</h4>
+	<p>This was composed for the album 'The Old Simplicity' which was recorded in Chicago and produced by Dennis Cahill.</p>
+	 <audio controls= "controls" preload="auto">
+ 		<source src="/music/cumha.mp3" type="audio/mpeg; codecs=mp3"/>
+ 	</audio><br><br>
+
+ 	<h4>----The Brown Bull of Cill na Móna/The Tipperary Temptress (2002)----</h4>
+	<p>Two tunes composed shortly after my arrival in Kilnamona, County Clare in 1996, I was very generously given the opportunity to record them on an award-winning Niamh Parsons' album, 'Heart's Desire'. I am here also very lucky to be accompanied by the wonderful Dennis Cahill in his inimitable style. </p>
+	 <audio controls= "controls" preload="auto">
+ 		<source src="/music/BrownBull.mp3" type="audio/mpeg; codecs=mp3"/>
+ 	</audio><br><br>
+
+
+
  			</div>
 		</div>
 	</div>
