--- a/templates/guitar.html
+++ b/templates/guitar.html
@@ -20,15 +20,27 @@
  	</audio><br><br>
 
  	<h4>----Tremolo Study (April, 2016)----</h4>
-	<p>A residual study from time spent with Flamenco, this is a beautiful piece by the great teacher, Oscar Herrero.</p>
+	<p>A residual study from time spent studying Flamenco, this is a beautiful piece by the great guitarist and teacher, Oscar Herrero.</p>
 	 <audio controls= "controls" preload="auto">
  		<source src="/music/TremeloEminor.mp3" type="audio/mpeg; codecs=mp3"/>
  	</audio><br><br>
 
- 	<h4>----The Lost Arpeggio (March, 2012)----</h4>
-	<p>Composed and recorded while supposed to have been studying, this is Graham checking out a Taylor acoustic guitar that he eventually purchased from a friend whilst living in the beautiful County Clare.</p>
+ 	<h4>----The Southwest Wind/The Petticoat Loose (Jigs, 2005)----</h4>
+	<p>From the album 'Live at Fylde', here is the only solo guitar track, a set of jigs learnt from the wonderful 'Southwest Wind' album by the legendary Peter O'Loughlin and Ronan Browne.</p>
 	 <audio controls= "controls" preload="auto">
- 		<source src="/music/LostArpeggio.mp3" type="audio/mpeg; codecs=mp3"/>
+ 		<source src="/music/Southwest.mp3" type="audio/mpeg; codecs=mp3"/>
+ 	</audio><br><br>
+
+ 	<h4>----Moll & Poll Halfpenny (Hornpipes, 2005)----</h4>
+	<p>Two old hornpipes learnt from the playing of Maeve Donnelly, Peadar O'Loughlin, Ronan Browne and Geraldine Cotter on their album 'The Thing Itself. Accompanied by the inimitable Dennis Cahill.</p>
+	 <audio controls= "controls" preload="auto">
+ 		<source src="/music/moll.mp3" type="audio/mpeg; codecs=mp3"/>
+ 	</audio><br><br>
+
+ 	<h4>----Jenny Picking Cockles/ The Collier's (Reels, 2002)----</h4>
+	<p>Two fairly common reels learned from the wonderful book 'The Dance Music of Willie Clancy' by Pat Mitchell. Lucky enough to be given the opportunity to record these tunes on Niamh Parsons' album 'Heart's Desire', Dennis Cahill's first production, and wonderfully accompanied here by the one and the same man.</p>
+	 <audio controls= "controls" preload="auto">
+ 		<source src="/music/Jenny.mp3" type="audio/mpeg; codecs=mp3"/>
  	</audio><br><br>
 
 	
